The following list contains all changes to pgAdmin3, as present in svn. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2005-12-09 DP  1.4.1  Default the encoding of new databases to the cluster encoding, per Peter Eisentraut.
    <li>2005-12-09 DP  1.4.1  Sort encoding names in dlgDatabase, per Peter Eisentraut.
    <li>2005-12-06 AP  1.4.1  store UTF8 connect info in pgpass.conf if necessary
    <li>2005-12-03 AP  1.4.1  Major fix for wx2.6.2 API changes (comboboxes)
    <li>2005-12-02 DP  1.4.1  Drop constraints on columns before the columns themselves [Miha Radej]
    <li>2005-12-01 AP  1.4.1  Deal with incompatible wx2.6.2 API changes (comboboxes)
    <li>2005-11-30 AP  1.4.1  Graphical explain: distinct scan images
    <li>2005-11-25 DP  1.4.1  Fix the server status SQL query
    <li>2005-11-25 FGP 1.4.1  Don't include pgAgent in the Mac OSX bundle
    <li>2005-11-25 FGP 1.4.1  Include pg_dump/pg_restore in the Mac OSX bundle
    <li>2005-11-20 DP  1.4.1  Use a proper 'Save As' style dialogue for selecting backup files
    <li>2005-11-20 AP  1.4.1  Don't show pk hint when editing view
    <li>2005-11-20 AP  1.4.1  Add missing NO ACTION FK constraint
    <li>2005-11-11 DP         Set version numbers whereever required from version.h during bootstrap
    <li>2005-11-11 AP         leave pre-1.5 server config settings untouched
    <li>2005-11-10 AP         Configurable indent in ctlSqlBox
    <li>2005-11-10 DP         Ensure we always use aclocal/automake 1.9 during bootstrap
    <li>2005-11-10 AP  1.4.1  Fix role rename (r: Antonio)
    <li>2005-11-09 AP         database and schema display restriction
    <li>2005-11-09 AP         overhaul of server config settings