@@ -18,6 +18,8 @@ The following list contains all changes to pgAdmin3, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2005-12-11 AP  1.4.2  Fix: Unsubscribe set on receiver
+    <li>2005-12-11 AP  1.4.2  Another wxComboBox(2.6.2) related fix
     <li>2005-12-09 DP  1.4.1  Default the encoding of new databases to the cluster encoding, per Peter Eisentraut.
     <li>2005-12-09 DP  1.4.1  Sort encoding names in dlgDatabase, per Peter Eisentraut.
     <li>2005-12-06 AP  1.4.1  store UTF8 connect info in pgpass.conf if necessary
